Fixed some authorize stuff with the login

--- a/MovieBioApp/Pages/MoviePage.razor
+++ b/MovieBioApp/Pages/MoviePage.razor
@@ -136,32 +136,43 @@
 
                 </div>
 
-                <div class="col-sm-6">
-                    <h3>
-                        <strong>Write your review</strong>
-                    </h3>
-                    <div class="form-outline">
-                        <textarea class="form-control" id="@_reviewTextfield" rows="4"></textarea>
-                        <select>
-                            <option value=”@_reviewRating”>1</option>
-                            <option value=”@_reviewRating”>2</option>
-                            <option value=”@_reviewRating”>3</option>
-                            <option value=”@_reviewRating”>4</option>
-                            <option value=”@_reviewRating”>5</option>
-                            <option value=”@_reviewRating”>6</option>
-                            <option value=”@_reviewRating”>7</option>
-                            <option value=”@_reviewRating”>8</option>
-                            <option value=”@_reviewRating”>9</option>
-                            <option value=”@_reviewRating”>10</option>
+                <AuthorizeView>
+                    <Authorized>
+                        <div class="col-sm-6">
+                            <h3>
+                                <strong>Write your review</strong>
+                            </h3>
+                            <div class="form-outline">
+                                <textarea class="form-control" id="@_reviewTextfield" rows="4"></textarea>
+                                <select>
+                                    <option value=”@_reviewRating”>1</option>
+                                    <option value=”@_reviewRating”>2</option>
+                                    <option value=”@_reviewRating”>3</option>
+                                    <option value=”@_reviewRating”>4</option>
+                                    <option value=”@_reviewRating”>5</option>
+                                    <option value=”@_reviewRating”>6</option>
+                                    <option value=”@_reviewRating”>7</option>
+                                    <option value=”@_reviewRating”>8</option>
+                                    <option value=”@_reviewRating”>9</option>
+                                    <option value=”@_reviewRating”>10</option>
 
-                        </select>
-                        <br>
-                        <button @onclick="(() => SaveReview())">Submit review</button>
-                    </div>
+                                </select>
+                                <br>
+                                <button @onclick="(() => SaveReview())">Submit review</button>
+                            </div>
 
 
-                </div>
+                        </div>
+                    </Authorized>
+                    <NotAuthorized>
+                        <div class="col-sm-6">
+                            <h3>
+                                <strong>Log in or signup to write your own review!</strong>
+                            </h3>
 
+                        </div>
+                    </NotAuthorized>
+                </AuthorizeView>
             </div>
 
         </div>
@@ -184,22 +195,23 @@
     List<string> _omDbGenre;
 
     int idToBeSet = 15414;
-    
+
     protected override async Task OnInitializedAsync()
     {
-        _movie = await MovieService.GetMovieById(15414);
+        _movie = await MovieService.GetMovieById(idToBeSet);
 
         _omDbApiObj = await OmDbApiService.GetOMDbAPIMovie(_movie.MovieTitle, _movie.Year);
-        
-        _omDbActors = _omDbApiObj.actors.Split(new char[] {','}).ToList();
-        _omDbDirectors = _omDbApiObj.directors.Split(new char[] {','}).ToList();
-        _omDbGenre = _omDbApiObj.genre.Split(new char[] {','}).ToList();
+
+        _omDbActors = _omDbApiObj.actors.Split(new char[] { ',' }).ToList();
+        _omDbDirectors = _omDbApiObj.directors.Split(new char[] { ',' }).ToList();
+        _omDbGenre = _omDbApiObj.genre.Split(new char[] { ',' }).ToList();
     }
 
     private void SaveReview()
     {
         if (_reviewRating == null || string.IsNullOrEmpty(_reviewTextfield))
         {
+            //TODO: Should display error
             Console.WriteLine("Should display error to user");
         }
     }
