--- a/MovieBioApp/Pages/LogIn.razor
+++ b/MovieBioApp/Pages/LogIn.razor
@@ -1,7 +1,7 @@
 ﻿@page "/LogIn"
 @using MovieBioApp.Authentication
 @inject AuthenticationStateProvider AuthenticationStateProvider
-
+@inject NavigationManager NavigationManager
 
 <h3>LogIn</h3>
 
@@ -35,6 +35,8 @@
             await ((CustomAuthentication) AuthenticationStateProvider).ValidateLogin(_username, _password);
             _username = "";
             _password = "";
+            NavigationManager.NavigateTo("/MoviePage"); //TODO: DELETE THIS
+
 
         }
         catch (Exception e)
