--- a/MovieBioApp/Pages/Top200Movies.razor
+++ b/MovieBioApp/Pages/Top200Movies.razor
@@ -40,7 +40,7 @@
                     </div>
                 
                     <div class="col-md-2">
-                        <div>@movie.Year@*omdbDict[movie.MovieTitle+movie.Year].genre*@</div>
+                        <div>@movie.Year</div>
                     </div>
                 
                     <div class="col-md-2">
