--- a/MovieBioApp/Pages/UserProfile.razor
+++ b/MovieBioApp/Pages/UserProfile.razor
@@ -85,26 +85,37 @@
 <h1 class="justify-content-end">Favorite movies</h1>
 <div>
     <h1>Niceness ratio</h1>
-    <div class="stars" style="--w: 40%;"></div>
+    
+        @if(nicenessRatio.CompareTo(-1) == 0)
+        {
+            <div class="stars" style="--w: 50%;"></div>
+        }
+        else
+        {
+            <div class="stars" style="--w: @nicenessRatio%;"></div>
+        }
 </div>
 
 </body>
 
 </html>
 @code {
-    string username = "test";
+    double nicenessRatio;
+    string username = "Crisilulumaner";
     string email = "";
     string phone = "";
     string password,confirmPassword = "";
     string biography = "";
     UserInfo Handler;
+    
     UserInfoService Service = new UserInfoService();
 
     protected override async Task OnInitializedAsync()
     {
         
         Handler = await Service.GetUserInfoRest(username);
-        
+        nicenessRatio= await Service.getNicenessRatio(username);
+
     }
 
     public async Task<bool> submitChangePassword()
